--- a/requirements.txt
+++ b/requirements.txt
@@ -3,20 +3,30 @@ attrs==22.2.0
 cachetools==5.3.0
 certifi==2022.12.7
 click==8.1.3
+contourpy==1.0.7
 coverage==7.2.3
+cycler==0.11.0
 exceptiongroup==1.1.1
 fastapi==0.95.0
+fonttools==4.39.3
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
 iniconfig==2.0.0
+kiwisolver==1.4.4
+matplotlib==3.7.1
+numpy==1.24.2
 packaging==23.0
+Pillow==9.5.0
 pluggy==1.0.0
 pydantic==1.10.7
+pyparsing==3.0.9
 pytest==7.2.2
 pytest-asyncio==0.21.0
+python-dateutil==2.8.2
 rfc3986==1.5.0
+six==1.16.0
 sniffio==1.3.0
 starlette==0.26.1
 tomli==2.0.1
